--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,18 @@
-@font-face {
-  font-family: PFDinTextCondPro;
-  src: url(../fonts/PFDinTextCondPro-Regular.ttf);
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: PFDinTextCondPro;
-  src: url(../fonts/PFDinTextCondPro-Medium.ttf);
-  font-weight: 500;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-  background: rgb(246, 246, 246);
-  font-family: PFDinTextCondPro;
-  font-size: 24px;
+  background: #e8e9eb;
+  color: #777;
+  padding-bottom: 140px;
+  font-family: 'Raleway', sans-serif;
 }
 
 h1 {
-  font-family: PFDinTextCondPro;
-  font-weight: 400;
   text-shadow: 2px 4px 3px rgba(0,0,0,0.3) inset;
   color: #424242;
-  font-size: 50px;
   font-weight: 400;
   text-align: center;
   margin-bottom: 24px;
@@ -32,15 +23,11 @@ b {
 }
 
 .card {
-  background: #ffffff;
-  box-shadow: 0 2px 6px rgba(0,0,0,.1);
   text-align: center;
   padding-top: 10px;
   padding-bottom: 9px;
   border: none;
-  border-radius: 0;
   -webkit-appearance: none;
-  font-size: 24px;
   color: #424242;
   margin: 0;
   box-sizing: border-box;
@@ -48,51 +35,53 @@ b {
   width: 100%;
   height: 100%;
   animation: appear .4s linear;
-}
+  border-radius: 5px;
+  background-color:  #ffffff;
+  box-shadow: 0px 2px 0px 0px #d6d8dc;
+  outline: none;
 
-select.card option {
-  text-align: center;
+  font-size: 18px;
 }
 
 .cards.row {
   padding-top: 10px;
 }
 
-.cards div:first-child {
-}
-
 .card#add {
-  font-size: 76px;
-  line-height: 32px;
-  padding: 16px 0 11px 0;
-  color: #c8c8c8;
+  color: white;
+  background: #c6cad2;
   cursor: pointer;
   outline: none;
+
+  font-size: 60px;
+  line-height: 20px;
+  font-weight: 200;
 }
 
 .card.remove {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  font-size: 76px;
-  line-height: 32px;
-  color: #c8c8c8;
+  color: white;
+  background: #c6cad2;
   cursor: pointer;
-  outline: none;
+
+  font-size: 60px;
+  line-height: 20px;
+  font-weight: 200;
 }
 
 .setall-btn {
-  height: 30px;
-  background-color: #3674a9;
+  background-color: #c6cad2;
   color: white;
-  padding: 2px;
   cursor: pointer;
-  outline: none;
   transition: all .2s;
 }
 
 .setall-btn:active {
   transition: all .2s;
   transform: scale(0.9);
+}
+
+button.card {
+  box-shadow: none;
 }
 
 #fire:active  {
@@ -133,12 +122,6 @@ input::-webkit-inner-spin-button {
   }
 }
 
-@media (max-width: 992px) {
-  .card.remove {
-    font-size: 54px;
-  }
-}
-
 @keyframes appear {
   from {
     opacity: 0;
@@ -147,36 +130,25 @@ input::-webkit-inner-spin-button {
   }
 }
 
-.narrow {
-  padding-top: 2px;
-  padding-bottom: 0px;
-}
-
-button.narrow {
-  max-height: 29px;
-}
-
-.semi-narrow {
-  padding-top: 8px;
-  padding-bottom: 3px;
-}
-
 .separator {
   height: 35px;
 }
 
 #fire {
-  background-color:  #3674a9;
+  background-color: #c6cad2;
   color: white;
   margin-bottom: 50px;
-  outline: none;
   transition: all .2s;
+
+  height: 80px;
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 #recalculate {
-  background-color:  #3674a9;
+  background-color: #c6cad2;
   color: white;
-  outline: none;
   transition: all .2s;
 }
 
@@ -190,17 +162,16 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   width: 16px;
   height: 16px;
-  border: 2px solid white;
+  border: 2px solid #c6cad2;
   display: inline-block;
-  background: white;
+  background: transparent;
   outline: none;
-  box-shadow: 0 2px 6px rgba(0,0,0,.1);
   transition: all .1s;
+  border-radius: 4px;
 }
 
 input[type="checkbox"]:checked {
-  background-color:  #3674a9;
-  transition: all .1s;
+  background-color: #c6cad2;
 }
 
 .middle {
@@ -215,20 +186,20 @@ a.receipt {
 }
 
 a {
-  color:  #3674a9;
+  color: #44b9e0;
 }
 
-input[disabled] {
-  text-decoration: line-through;
-}
+/*input[disabled] {*/
+  /*text-decoration: line-through;*/
+/*}*/
 
 input.success, input.fail.success {
-  background: #5eb98c;
+  background: #04c89d;
   color: white;
 }
 
 .fail {
-  background: #ef8f90;
+  background: #f46746;
   color: white;
 }
 
@@ -238,7 +209,21 @@ img {
 
 .collapsible {
   cursor: pointer;
-  color: black;
+  color: #44b9e0;
+}
+
+.collapsible > span {
+  transition: all .2s;
+  font-weight: 100;
+  font-size: 10px;
+  display: inline-block;
+
+  vertical-align: top;
+}
+
+.collapsible.on > span {
+  transition: all .2s;
+  transform: rotate(90deg);
 }
 
 .collapsible-container > div {
@@ -284,7 +269,8 @@ img {
 
 .donate {
   font-size: 0.8em;
-  text-align: center;
+
+  vertical-align: middle;
 }
 
 #setall-fee, #setall-amount {
@@ -304,7 +290,6 @@ img {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 9px;
-  font-size: 24px;
   margin: 0;
   box-sizing: border-box;
   max-width: 100%;
@@ -337,4 +322,107 @@ img {
 
 .gas {
   text-align: center;
+}
+
+header {
+  color: white;
+  background: url(../img/header.png) 50%;
+  height: 80px;
+  margin-bottom: 80px;
+}
+
+footer {
+  color: white;
+  background: url(../img/header.png) 40%;
+  height: 80px;
+
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  position: absolute;
+}
+
+header .container, footer .container {
+  padding: 15px;
+  height: 100%;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 38px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+  color: white;
+
+  vertical-align: middle;
+}
+
+.divider {
+  font-weight: 100;
+  font-size: 38px;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: inline-block;
+
+  vertical-align: middle;
+}
+
+.subtitle {
+  font-size: 19px;
+  line-height: 38px;;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 100;
+  display: inline-block;
+
+  vertical-align: middle;
+}
+
+#theme-switch {
+  cursor: pointer;
+  border-radius: 12px;
+  background-color:  #122c5f;
+  box-shadow: 0 0 5px 1px #2e496b;
+  width: 49px;
+  height: 24px;
+
+  margin-top: 10px;
+  margin-bottom: 9px;
+}
+
+#switch {
+  width: 20px;
+  height: 20px;
+
+  top: 2px;
+  bottom: 2px;
+  left: 0;
+
+  border-radius: 50%;
+  transition: all .2s;
+  position: relative;
+
+  background: #ffffff url(../img/sun.png) center no-repeat;
+}
+
+#switch.night {
+  right: 0;
+  left: 29px;
+
+  transition: all .2s;
+
+  background: #ffffff url(../img/moon.png) center no-repeat;
+}
+
+.spin {
+  animation: spin infinite 1s;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  } to {
+    transform: rotate(360deg);
+  }
 }
