--- a/css/index.css
+++ b/css/index.css
@@ -375,3 +375,88 @@ h2 {
   }
 }
 
+/* THEME */
+
+body {
+  background: var(--bg);
+  color: var(--color);
+}
+
+.card {
+  color: var(--card);
+  background-color: var(--card-bg);
+  box-shadow: 0px 2px 0px 0px var(--card-shadow);
+}
+
+.card#add, .card#remove, .setall-btn, #fire, #recalculate {
+  color: var(--on-dark);
+  background: var(--card-btn);
+}
+
+input[type="checkbox"] {
+  border: 2px solid var(--card-btn);
+}
+
+input[type="checkbox"]:checked {
+  background-color: var(--card-btn);
+}
+
+a, .collapsible {
+  color: var(--link);
+}
+
+input.success, input.fail.success {
+  background: var(--success);
+  color: var(--on-dark);
+}
+
+.fail {
+  background: var(--failure);
+  color: var(--on-dark);
+}
+
+header, footer, h2 {
+  color: var(--on-dark);
+}
+
+#theme-switch {
+  background-color:  #122c5f;
+  box-shadow: 0 0 5px 1px #2e496b;
+}
+
+/* THEME VARS */
+:root {
+  --color: #777;
+  --bg: #ebecee;
+  --link: #44b9e0;
+
+  --card-btn: #c6cad2;
+
+  --card: #424242;
+  --card-bg: #ffffff;
+  --card-shadow: #d6d8dc;
+
+  --success: #04c89d;
+  --failure: #f46746;
+
+  --on-dark: white;
+}
+
+/*
+:root {
+  --color: #3f639e;
+  --bg: #0f123b;
+  --link: #1783cf;
+
+  --card-btn: #1783cf;
+
+  --card: #3f639e;
+  --card-bg: #1e2467;
+  --card-shadow: #00000000;
+
+  --success: #007b7a;
+  --failure: #a73c22;
+
+  --on-dark: white;
+}
+*/
