--- a/css/index.css
+++ b/css/index.css
@@ -288,20 +288,24 @@ footer {
   position: absolute;
 }
 
-.shadow {
+.shadow.top {
   background: url(../img/shadow.png) bottom no-repeat;
-  height: 22px;
-  margin: 0;
-  margin-top: -80px;
   width: 100%;
+  height: 22px;
   visibility: var(--glow);
+
+  top: -80px;
+  position: relative;
 }
 
 .shadow.bottom {
-  transform: rotate(180deg);
-  left: 0;
-  bottom: 80px;
+  background: url(../img/shadow.png) bottom no-repeat;
   width: 100%;
+  height: 22px;
+  visibility: var(--glow);
+
+  transform: rotate(180deg);
+  bottom: 80px;
   position: absolute;
 }
 
